04-Ingress-ExternalDNS/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: my-aws-ingress-class
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
  labels:
    name: jnw_ingress
spec:
  controller: ingress.k8s.aws/alb
