04-Ingress-ExternalDNS/ALB-ingress.yaml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-externaldns
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: externaldns-ingress
    # Ingress Core Settings
    #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource)
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'   
    external-dns.alpha.kubernetes.io/hostname: weather.aicintech.com, netflix.aicintech.com, joomla.aicintech.com
spec:
  ingressClassName: my-aws-ingress-class   # Ingress Class                  
  defaultBackend:
    service:
      name: weather-app-svc
      port:
        number: 80     
  rules:
    - host: weather.aicintech.com
      http:
        paths:      
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: weather-svc
                port: 
                  number: 80
    - host: netflix.aicintech.com
      http:
        paths:      
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: netflix-svc
                port: 
                  number: 80
    - host: joomla.aicintech.com
      http:
        paths:      
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: netflix-svc
                port: 
                  number: 80
                           

# Important Note-1: In path based routing order is very important, if we are going to use  "/*", try to use it at the end of all rules.                                        
                        
# 1. If  "spec.ingressClassName: my-aws-ingress-class" not specified, will reference default ingress class on this kubernetes cluster
# 2. Default Ingress class is nothing but for which ingress class we have the annotation `ingressclass.kubernetes.io/is-default-class: "true"`
